Tue Feb 17 23:56:45 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/global.features:

          Disabled xerces by default as well. 
        
Tue Feb 17 20:19:06 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/os_include/os_stddef.h:
          Removed unneeded definitions for NULL and offsetof.

Tue Feb 17 18:08:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Client_Logging_Handler.h:
        * netsvcs/lib/Name_Handler.cpp:
        * netsvcs/lib/Name_Handler.h:
        * netsvcs/lib/Server_Logging_Handler.h:
        * netsvcs/lib/Server_Logging_Handler_T.cpp:
        * netsvcs/lib/Time_Request_Reply.cpp:
        * netsvcs/lib/Time_Request_Reply.h:
        * netsvcs/lib/Token_Handler.cpp:
        * netsvcs/lib/Token_Handler.h:
        * netsvcs/lib/TS_Clerk_Handler.cpp:
        * netsvcs/lib/TS_Clerk_Handler.h:
        * netsvcs/lib/TS_Server_Handler.cpp:
        * netsvcs/lib/TS_Server_Handler.h:
          Revert svc_export.h file, much more dependencies then I expected

Tue Feb 17 17:46:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:
        * ace/Makefile.am:
          Readded svc_export.h

Tue Feb 17 17:45:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/svc_export.h:
          Readded this file, removing it breaks a lot of examples which all
          first have to be updated

Tue Feb 17 14:27:50 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/os_include/os_signal.h:
          Removed some legacy Linux code.

Tue Feb 17 14:20:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Based_Pointer_Test_Lib.cpp:
        * tests/Based_Pointer_Test_Lib_Export.h:
        * tests/DLL_Test.h:
        * tests/DLL_Test_Export.h:
        * tests/tests.mpc:
          Added specific export files for these tests

Tue Feb 17 13:13:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
