@@ -1,3 +1,13 @@
+Wed Feb 18 09:22:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * DLL_Test.h:
+          Revert changes made by Johnny (just use 
+          ace/svc_export.h again).
+          
+        * DLL_Test_Export.h:
+          Removed since ace/svc_export.h is
+          used again.
+
 Tue Feb 17 23:56:45 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * bin/MakeProjectCreator/config/global.features:
